# sandwich-lab-v2

./: .gitignore  Cargo.toml  README.md
data_aggregator/: hardhat.config.js  package-lock.json  package.json
data_aggregator/artifacts/contracts/DataAggregator.sol/: DataAggregator.json
data_aggregator/artifacts/contracts/DataUtils.sol/: DataUtils.dbg.json
data_aggregator/cache/: solidity-files-cache.json
data_aggregator/scripts/: example.js
data_aggregator/test/: test.js
evm/: README.md  hardhat.config.js  package-lock.json  package.json
evm/artifacts/contracts/@uniswap/v2-core/contracts/UniswapV2ERC20.sol/: UniswapV2ERC20.json
evm/artifacts/contracts/@uniswap/v2-core/contracts/UniswapV2Factory.sol/: UniswapV2Factory.json
evm/artifacts/contracts/@uniswap/v2-core/contracts/UniswapV2Pair.sol/: UniswapV2Pair.dbg.json  (+1 more)
evm/artifacts/contracts/DataAggregator.sol/: DataAggregator.dbg.json  DataAggregator.json
evm/artifacts/contracts/DataUtils.sol/: DataUtils.dbg.json  DataUtils.json
evm/cache/: solidity-files-cache.json
evm/contracts/: DataAggregator.sol  DataUtils.sol
evm/scripts/: deploy.js  example.js
evm/test/: test.js
migrations/2022-06-14-142948_create_pairs/: down.sql  up.sql
src/: app.rs  evm.rs  main.rs  rpc.rs  state.rs
src/api/: db.rs  mod.rs  models.rs  routes.rs  schema.rs
src/api/evm/: metadata.rs  mod.rs  sandwich.rs  scanner.rs  swap.rs
src/api/routes/: mod.rs  pair.rs  sandwiches.rs  utils.rs
src/templates/: base.rs  index.rs  mod.rs  not_found.rs  pair.rs
static/css/: base.css
static/js/: client.js
temp/: routes.rs
(+11 files in other folders)
