[package]
name = "sandwich-lab-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-files = "0.6.1"
openssl = "0.10.40"
diesel = { version = "1", features = ["postgres", "r2d2"] }
r2d2 = "0.8.9"
serde = "1"
dotenv = "0.15.0"
ethers = "0.6.2"
ramhorns = "0.14.0"